# projeto_pax

./: Readme.md  pax.py  pax_admin.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml
